# financial-sentiment-analysis

./: .gitignore  README.md  UPLOAD_GUIDE.md  pyproject.toml  requirements-finbert.txt  requirements.txt
.github/workflows/: ci.yml
data/: sample_financial_text.csv
notebooks/: financial_sentiment_analysis.ipynb
results/: rule_based_metrics.json  rule_based_predictions.csv
scripts/: run_analysis.py  sentiment_analysis.py
src/financial_sentiment/: __init__.py  cli.py  models.py  pipeline.py  visualization.py
tests/: test_models.py  test_pipeline.py
