[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-sentiment-analysis"
version = "0.1.0"
description = "Reproducible financial-text sentiment classification with rule-based, VADER, and FinBERT models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "scikit-learn>=1.3,<2.0",
    "matplotlib>=3.7,<4.0",
    "vaderSentiment>=3.3.2,<4.0",
]

[project.optional-dependencies]
finbert = [
    "transformers>=4.40,<5.0",
    "torch>=2.2,<3.0",
]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
financial-sentiment = "financial_sentiment.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
